dataset1235/2025-2/805158916/users/2597070668/executions/1584167357_208040576.log
== SUBMISSION (2025-08-27 14:50:20)
-- CODE: 
preco = float(input("Digite o nome do produto: "))
preco_final = preco - 0.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto: 1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto: 85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto: 12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto: 8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto: 170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto: 17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:34)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:31)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:31)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:29)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:49:37)
-- CODE: 
preco = float(input("Digite o nome do produto: "))
preco_final = preco - o.15* preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - o.15* preco
                           ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:51)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:28)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:26)
-- CODE: 
preco = float(input("Digite o nome do produto"))
preco = 200
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
Digite o nome do produto30.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
Digite o nome do produto30.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
Digite o nome do produto30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
Digite o nome do produto30.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
